made some listing changes and added ordered list

--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
 <!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>pGit testing</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <script src="main.js"></script>
+</head>
+<body>
+    <div>
+        <ul>
+            <li>chips and buscuits</li>
+            <li>chocolates</li>
+            <li>books</li>
+            <li>toys</li>
+        </ul>
+    </div>
+    <div>
+        <ol>
+            <li>pens</li>
+            <li>copy</li>
+        </ol>
+    </div>
+</body>
+</html>
